# emergence

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.org
specs/: .gitignore  README.rst  class_diagram.puml  template.rst
src/: CMakeLists.txt  emergenceConfig.h  emergenceConfig.h.in  main.cpp
src/entity/: CMakeLists.txt  entity.cpp  entity.h  inert_entity.cpp  inert_entity.h  living_entity.cpp  living_entity.h
src/entity/ant/: CMakeLists.txt  ant.cpp  ant.h
src/entity/ant/role/: role_ant.cpp  role_ant.h  role_ant_explorer.cpp  role_ant_explorer.h  role_ant_worker.cpp  role_ant_worker.h
src/entity/factory/: CMakeLists.txt  entity_factory.cpp  entity_factory.h
src/entity/food/: CMakeLists.txt  food.cpp  food.h
src/entity/movement_strategy/: CMakeLists.txt  movement_strategy.cpp  movement_strategy.h  movement_strategy_alignment.cpp  movement_strategy_alignment.h  movement_strategy_all_align.cpp  movement_strategy_all_align.h  movement_strategy_base.cpp  movement_strategy_base.h  movement_strategy_cohesion.cpp  movement_strategy_cohesion.h  movement_strategy_decorator.cpp  movement_strategy_decorator.h  movement_strategy_separation.cpp  movement_strategy_separation.h
src/entity/prototype_mgmt/: CMakeLists.txt  entity_prototypes_manager.cpp  entity_prototypes_manager.h
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  world_view.cpp  world_view.h
src/world/: CMakeLists.txt  world.cpp  world.h
test/: CMakeLists.txt  test_ant.cpp  test_food.cpp  test_world.cpp
